// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvailabilityDialog should initially render without a selected store 1`] = `
<styled.div>
  <styled.h1>
    Verifica Disponibilità
  </styled.h1>
  <styled.h3>
    abc - REF. 123
  </styled.h3>
  <styled.div>
    <styled.div
      isActive={false}
      onClick={[Function]}
    >
      <MapsPlace
        color="e4e4e4"
        style={
          Object {
            "height": 55,
            "width": 55,
          }
        }
      />
      <styled.div>
        <p>
          abc - abc
        </p>
        <p>
          bde 1
        </p>
        <p>
          213 - milan (abc)
        </p>
      </styled.div>
    </styled.div>
    <styled.div
      isActive={false}
      onClick={[Function]}
    >
      <MapsPlace
        color="e4e4e4"
        style={
          Object {
            "height": 55,
            "width": 55,
          }
        }
      />
      <styled.div>
        <p>
          asd - asdsa
        </p>
        <p>
          bae 1
        </p>
        <p>
          213 - roma (asd)
        </p>
      </styled.div>
    </styled.div>
  </styled.div>
  <styled.div />
  <styled.div />
</styled.div>
`;

exports[`AvailabilityDialog should render the selected store once it is clicked 1`] = `
<styled.div>
  <styled.h1>
    Verifica Disponibilità
  </styled.h1>
  <styled.h3>
    abc - REF. 123
  </styled.h3>
  <styled.div>
    <styled.div
      isActive={true}
      onClick={[Function]}
    >
      <MapsPlace
        color="e4e4e4"
        style={
          Object {
            "height": 55,
            "width": 55,
          }
        }
      />
      <styled.div>
        <p>
          abc - abc
        </p>
        <p>
          bde 1
        </p>
        <p>
          213 - milan (abc)
        </p>
      </styled.div>
    </styled.div>
    <styled.div
      isActive={false}
      onClick={[Function]}
    >
      <MapsPlace
        color="e4e4e4"
        style={
          Object {
            "height": 55,
            "width": 55,
          }
        }
      />
      <styled.div>
        <p>
          asd - asdsa
        </p>
        <p>
          bae 1
        </p>
        <p>
          213 - roma (asd)
        </p>
      </styled.div>
    </styled.div>
  </styled.div>
  <styled.div />
  <styled.div>
    <div>
      <styled.p>
        abc
      </styled.p>
      <styled.div>
        <p>
          bde 1
        </p>
        <p>
          213 - milan (abc)
        </p>
      </styled.div>
    </div>
    <Connect(StoreStockBadge)
      currentStoreStock={
        Object {
          "address": Object {
            "city": "milan",
            "state": "abc",
            "street": "bde",
            "streetNumber": "1",
            "zipCode": "213",
          },
          "code": "123",
          "name": "abc",
        }
      }
      showStore={false}
    />
  </styled.div>
</styled.div>
`;

exports[`AvailabilityDialog should update the selected store once a different one is clicked 1`] = `
<styled.div>
  <styled.h1>
    Verifica Disponibilità
  </styled.h1>
  <styled.h3>
    abc - REF. 123
  </styled.h3>
  <styled.div>
    <styled.div
      isActive={false}
      onClick={[Function]}
    >
      <MapsPlace
        color="e4e4e4"
        style={
          Object {
            "height": 55,
            "width": 55,
          }
        }
      />
      <styled.div>
        <p>
          abc - abc
        </p>
        <p>
          bde 1
        </p>
        <p>
          213 - milan (abc)
        </p>
      </styled.div>
    </styled.div>
    <styled.div
      isActive={true}
      onClick={[Function]}
    >
      <MapsPlace
        color="e4e4e4"
        style={
          Object {
            "height": 55,
            "width": 55,
          }
        }
      />
      <styled.div>
        <p>
          asd - asdsa
        </p>
        <p>
          bae 1
        </p>
        <p>
          213 - roma (asd)
        </p>
      </styled.div>
    </styled.div>
  </styled.div>
  <styled.div />
  <styled.div>
    <div>
      <styled.p>
        asdsa
      </styled.p>
      <styled.div>
        <p>
          bae 1
        </p>
        <p>
          213 - roma (asd)
        </p>
      </styled.div>
    </div>
    <Connect(StoreStockBadge)
      currentStoreStock={
        Object {
          "address": Object {
            "city": "roma",
            "state": "asd",
            "street": "bae",
            "streetNumber": "1",
            "zipCode": "213",
          },
          "code": "1234",
          "name": "asdsa",
        }
      }
      showStore={false}
    />
  </styled.div>
</styled.div>
`;
